deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app-juiceshop-web-dev
  name: app-juiceshop-web-dev-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-juiceshop-web-dev
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-juiceshop-web-dev
    spec:
      containers:
      - image: asia-southeast1-docker.pkg.dev/tdg-sec-non-prod-bnxe/devsecops-poc/app-juiceshop-web:11
        imagePullPolicy: Always
        name: app-juiceshop-web-dev
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  namespace: app-juiceshop-web-dev
  name: app-juiceshop-web-dev-service
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: app-juiceshop-web-dev
---
