service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: app-juiceshop-web-dev
  name: app-juiceshop-web-dev-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: app-juiceshop-web-dev
---
