gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: demo-app-juiceshop
  name: demo-app-juiceshop-gateway
spec:
  selector:
    istio: ingress-gateway-01
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: demo-app-juiceshop
  name: demo-app-juiceshop-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - demo-app-juiceshop-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: demo-app-juiceshop-service
        port:
          number: 80
